src/objects/Int_Delivery_Control__c.object
<CustomObject>
    <description>Int Delivery Control</description>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Of_Day_Indicator__c</fullName>
        <description>End Of Day Indicator</description>
        <label>End Of Day Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Of_Month_Indicator__c</fullName>
        <description>End Of Month Indicator</description>
        <label>End Of Month Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Of_Week_Indicator__c</fullName>
        <description>End Of Week Indicator</description>
        <label>End Of Week Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extraction_DateTime__c</fullName>
        <description>Extraction DateTime</description>
        <label>Extraction DateTime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Version__c</fullName>
        <description>Interface Version</description>
        <label>Interface Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <description>Reporting Date</description>
        <label>Reporting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System</description>
        <label>Source System</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Int Delivery Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Extraction_DateTime__c</columns>
        <columns>End_Of_Day_Indicator__c</columns>
        <columns>End_Of_Month_Indicator__c</columns>
        <columns>End_Of_Week_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEL-{0000000000}</displayFormat>
        <label>Delivery Control Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Delivery Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>